<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/authorization">

        <ListPreference
            android:key="authorization_type"
            android:title="@string/authorization_type"
            android:entries="@array/authorization_types"
            android:entryValues="@array/authorization_types"
            android:defaultValue="@string/client_token"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/customer">

        <EditTextPreference
            android:key="customer"
            android:title="@string/customer"
            android:summary="@string/customer_summary"
            android:defaultValue="@string/empty" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/options">

        <com.braintreepayments.demo.views.SummaryEditTestPreference
            android:key="merchant_account"
            android:title="@string/merchant_account"
            android:summary="@string/empty_merchant_account"
            android:defaultValue="@string/empty"/>

        <CheckBoxPreference
            android:key="collect_device_data"
            android:title="@string/collect_device_data"
            android:summary="@string/collect_device_data_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/android_pay">

        <CheckBoxPreference
            android:key="android_pay_require_shipping_address"
            android:title="@string/android_pay_require_shipping_address"
            android:summary="@string/android_pay_require_shipping_address_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="android_pay_require_phone_number"
            android:title="@string/android_pay_require_phone_number"
            android:summary="@string/android_pay_require_phone_number_summary"
            android:defaultValue="false" />

        <com.braintreepayments.demo.views.SummaryEditTestPreference
            android:key="android_pay_currency"
            android:title="@string/android_pay_currency_title"
            android:summary="@string/android_pay_currency_summary"
            android:defaultValue="@string/usd" />

        <com.braintreepayments.demo.views.SummaryEditTestPreference
            android:key="android_pay_allowed_countries_for_shipping"
            android:title="@string/android_pay_allowed_countries_for_shipping_title"
            android:summary="@string/android_pay_allowed_countries_for_shipping_summary"
            android:defaultValue="@string/us" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/google_pay">

        <CheckBoxPreference
            android:key="google_payment_allow_prepaid_cards"
            android:title="@string/google_payment_allow_prepaid_cards"
            android:summary="@string/google_payment_allow_prepaid_cards_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="google_payment_require_shipping_address"
            android:title="@string/android_pay_require_shipping_address"
            android:summary="@string/android_pay_require_shipping_address_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="google_payment_require_billing_address"
            android:title="@string/google_payment_require_billing_address"
            android:summary="@string/google_payment_require_billing_address_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="google_payment_require_phone_number"
            android:title="@string/android_pay_require_phone_number"
            android:summary="@string/android_pay_require_phone_number_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="google_payment_require_email"
            android:title="@string/google_payment_require_email"
            android:summary="@string/google_payment_require_email_summary"
            android:defaultValue="false" />

        <com.braintreepayments.demo.views.SummaryEditTestPreference
            android:key="google_payment_currency"
            android:title="@string/android_pay_currency_title"
            android:summary="@string/android_pay_currency_summary"
            android:defaultValue="@string/usd" />

        <com.braintreepayments.demo.views.SummaryEditTestPreference
            android:key="google_payment_allowed_countries_for_shipping"
            android:title="@string/android_pay_allowed_countries_for_shipping_title"
            android:summary="@string/android_pay_allowed_countries_for_shipping_summary"
            android:defaultValue="@string/us" />

    </PreferenceCategory>

</PreferenceScreen>